fixed spacing on load page

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -49,7 +49,7 @@
 
 #instructions-text p{
     font-size: 18px;
-    line-height: 40px;
+    line-height: 30px;
     text-align: inline;
 }
 
